--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -5,7 +5,6 @@
 :root {
     --primary-color: #FFBF00;
     --secondary-color: #770058;
-    --tertiary-color: ;
     --light-color: #E7DEDA;
 }
 
@@ -120,4 +119,55 @@ p {
     border-radius: 15px;
     border: 2px solid var(--secondary-color);
 
+}
+
+.answer:hover {
+    background-color: var(--secondary-color);
+    color: var(--light-color);
+}
+
+/* High score styling */
+.highScore-container {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    width: 50%;
+}
+
+.score-container{
+    padding: 5px 15px;
+    border: 1px solid var(--light-color);
+    border-radius: 10px;
+}
+
+#final-score{
+    margin: 5px;
+    border-bottom:2px solid rgba(255, 255, 255, .75);
+}
+
+#final-information {
+    font-size: 18px;
+}
+
+.initials-form {
+    width: 100%;
+    display: flex;
+    text-align: left;
+    margin-top: 15px;
+}
+
+.initials-form input{
+    border: 1px solid var(--primary-color);
+    display: inline;
+    padding: 7px 15px;
+    font-size: 16px;
+    width: 50%;
+    margin-left: 15px;
+    margin-right: 15px;
+    border-radius: 10px;
+    background-color:var(--light-color);
+}
+
+.initials-form label {
+    padding: 10px;
 }
